09-08-13
 - Added checks for statcopy to work for episode ends.

09-05-13
 - Raised MAX_BOSS_SPOTS and MAX_MACE_SPOTS from 8 to 32.

09-04-13
 - "-statcopy <filename.txt>" will make a file (or append to it) with the
   game statistics.  Works with all game modes.  If you do not specify a
   filename it will default to STATS.TXT.  I did my best to make sure it
   will default if not specified, but if you get some weirdness not
   remembering parameters or desyncing games because of missing params it's
   likely my checks aren't as good as I thought.
  - Fixed P_SetMessage "ultimate messages" value to be cleared on death
   and finish levels.  If you died and immediately respawned in a netgame
   messages would be disabled unless you reset the value in the menu or
   another "ultimate message" appeared.  In my stats testing I also found
   that if you saved in front of an exit and "GAME RESTORED" was still on
   the screen, flick the switch, messages again would be disabled.
   If you find other weird situations where it happens let me know.
  - New cheat "HHSCOTT" to immediately finish level.  Was originally for
   testing the statcopy function, but figured I'd leave it in.

09-03-13
 - Nothing crazy, but the game will tell you that you can't load games
   from older versions.

09-02-13
 - "-noexit" to disable exits in netgames.  Useful for DM maps.  Only works
   for valid netgames.  You can test it out with IPXSETUP.EXE -NODES 1
   -NOEXIT.
 - Had to shift the options menu up a bit since it was causing some glitches
   with the status bar.

09-01-13
 - Extended limits from wHeretic.  Should be able to play some larger maps
   from 1998-1999'ish.
   * MAXVISPLANES from 128 to 1024
   * MAXOPENINGS from SCREENWIDTH*64 to SCREENWIDTH*256
   * MAXDRAWSEGS from 256 to 1024
   * MAXVISSPRITES from 128 to 1024
   * Raised Save Game maximum file size from about ~196KB to ~1024KB(1MB)
   * Raised Save Game maximum string size from 24 to 256.