@@ -75,8 +75,13 @@ void P_Thrust(player_t *player, angle_t angle, fixed_t move)
 void P_CalcHeight (player_t *player)
 {
 	int             angle;
+	int	maxbob; // FS
 	fixed_t bob;
 
+	if (headBob < 1)
+		maxbob = 0; // FS: Hate bob
+	else
+		maxbob = 0x100000;
 //
 // regular movement bobbing (needs to be calculated for gun swing even
 // if not on ground)
@@ -85,8 +90,8 @@ void P_CalcHeight (player_t *player)
 	player->bob = FixedMul (player->mo->momx, player->mo->momx)+
 	FixedMul (player->mo->momy,player->mo->momy);
 	player->bob >>= 2;
-	if (player->bob>MAXBOB)
-		player->bob = MAXBOB;
+	if (player->bob>maxbob)
+		player->bob = maxbob;
 	if(player->mo->flags2&MF2_FLY && !onground)
 	{
 		player->bob = FRACUNIT/2;
@@ -152,9 +157,6 @@ void P_CalcHeight (player_t *player)
 	{
 		player->viewz = player->mo->floorz+4*FRACUNIT;
 	}
-
-        if (headBob < 1)
-                bob = player->bob = 0; // FS: Hate bob
 }
 
 /*
